# quick_parse

./: .gitignore  CMakeLists.txt  LICENCE  README.md  README_dependencies.md  conanfile.txt
.github/workflows/: ci.yml
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  parser_fuzz_test.cpp  xxd_print_fuzz_test.cpp
src/: CMakeLists.txt  file_reader.cpp  file_reader.hpp  main.cpp  open_file.cpp  open_file.hpp  section_description.cpp  section_description.hpp  workarounds.hpp  xxd_print.cpp  xxd_print.hpp
test/: CMakeLists.txt  file_reader_test_data.txt  file_reader_unittests.cpp  section_description_unittests.cpp
